<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Social Planner</string>
    <string name="action_new_event">New Event</string>
    <string name="action_add_person">Add Person</string>
    <string name="action_get_location">Get Location</string>
    <string name="action_edit">Edit Event</string>
    <string name="action_save">Save Event</string>
    <string name="action_discard">Delete Event</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_toggle_markers">Toggle Markers</string>
    <string name="action_fit_zoom">Fit Zoom</string>
    <string name="message_empty_event_list">Event List is Empty</string>
    <string name="form_heading_title">Title</string>
    <string name="form_heading_start_date">Start Date</string>
    <string name="form_heading_end_date">End Date</string>
    <string name="form_heading_start_time">Start Time</string>
    <string name="form_heading_end_time">End Time</string>
    <string name="form_heading_venue">Venue</string>
    <string name="form_heading_location">Location</string>
    <string name="form_heading_notes">Notes</string>
    <string name="form_heading_attendees">Attendees</string>
    <string name="hint_enter_title">Title for event</string>
    <string name="hint_enter_start_date">Start date of event</string>
    <string name="hint_enter_end_date">End date of event</string>
    <string name="hint_enter_start_time">Start time for event</string>
    <string name="hint_enter_end_time">End time for event</string>
    <string name="hint_enter_venue">Venue for event</string>
    <string name="hint_enter_location">Location of event</string>
    <string name="hint_enter_notes">Notes for event</string>
    <string name="hint_enter_attendees">Attendees for event</string>
    <string name="title_activity_event_view">View Event</string>
    <string name="title_activity_event_new">New Event</string>
    <string name="title_activity_event_edit">Edit Event</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_get_location">Get Location</string>
    <string name="title_service_event_notification">Event Notification Service</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="social_event_deleted">Event Deleted</string>
    <string name="social_event_not_deleted">Event Not Deleted</string>
    <string name="social_events_deleted">Events Deleted</string>
    <string name="social_events_not_deleted">Events Not Deleted</string>
    <string name="social_event_created">Event Created</string>
    <string name="social_event_not_created">Event Not Created</string>
    <string name="social_event_saved">Event Saved</string>
    <string name="social_event_not_saved">Event Not Saved</string>
    <string name="title_not_entered">Enter a Title</string>
    <string name="start_date_not_entered">Enter a Start Date</string>
    <string name="start_time_not_entered">Enter a Start Time</string>
    <string name="end_date_not_entered">Enter an End Date</string>
    <string name="end_time_not_entered">Enter an End Time</string>
    <string name="end_time_before_start_time">Start Time must be before End Time</string>

    <string-array name="action_list">
        <item>Agenda</item>
        <item>Week</item>
    </string-array>

</resources>
