<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.socialeventplanner.SocialEventEditActivity" >

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"/>
    
    <item
        android:id="@+id/action_get_location"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_place"
        android:title="@string/action_get_location"/>
    
    <item
        android:id="@+id/action_add_person"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_add_person"/>
    
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/action_help" />
    
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />
    
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
