<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.socialeventplanner.SocialEventListActivity" >
          
    <item
        android:id="@+id/action_new_event"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/action_new_event" />
    
    <item
        android:id="@+id/action_map"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_map"/>
    
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/action_help" />
    
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />
    
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    
</menu>
