<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.socialeventplanner.SocialEventDisplayActivity" >

    <item
        android:id="@+id/action_discard"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_discard"/>
    
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_help" />
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_about" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
