<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="com.lazokin.socialeventplanner.activities.EditEventActivity" >

  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
        <!-- Title input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_title"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:id="@+id/social_event_input_field_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_enter_title" />

        <!-- Start date and time input -->
        <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:baselineAligned="false"
    		android:orientation="horizontal" >
    		
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginRight="4dp"
    			android:orientation="vertical" >
                
                <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_start_date"
		            style="?android:listSeparatorTextViewStyle" />

		        <EditText
		            android:id="@+id/social_event_input_field_start_date"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:inputType="date"
		            android:focusable="false"
		            android:hint="@string/hint_enter_start_date" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginLeft="4dp"
    			android:orientation="vertical" >
               
                   <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_start_time"
		            style="?android:listSeparatorTextViewStyle" />

		        <EditText
		            android:id="@+id/social_event_input_field_start_time"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:inputType="time"
		            android:focusable="false"
		            android:hint="@string/hint_enter_start_time" />

            </LinearLayout>
            
        </LinearLayout>
        
        <!-- End date and time input -->
        <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:baselineAligned="false"
    		android:orientation="horizontal" >
    		
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginRight="4dp"
    			android:orientation="vertical" >
                
                <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_end_date"
		            style="?android:listSeparatorTextViewStyle" />

		        <EditText
		            android:id="@+id/social_event_input_field_end_date"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:inputType="date"
		            android:focusable="false"
		            android:hint="@string/hint_enter_end_date" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginLeft="4dp"
    			android:orientation="vertical" >
                
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_end_time"
		            style="?android:listSeparatorTextViewStyle" />
		
		        <EditText
		            android:id="@+id/social_event_input_field_end_time"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:inputType="time"
		            android:focusable="false"
		            android:hint="@string/hint_enter_end_time" />

            </LinearLayout>
            
        </LinearLayout>

        
        <!-- Venue input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_venue"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:id="@+id/social_event_input_field_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_enter_venue" />
        
        <!-- Location input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_location"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:id="@+id/social_event_input_field_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_enter_location" />
        
        <!-- Notes input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_notes"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:id="@+id/social_event_input_field_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_enter_notes" />
        
        <!-- Attendees input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_attendees"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:id="@+id/social_event_input_field_attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_enter_attendees" />

    </LinearLayout>

</ScrollView>
