<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Title display -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_title"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:id="@+id/social_event_display_field_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?android:listViewStyle" />
        
        <!-- Start date and time display -->
        <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:baselineAligned="false"
    		android:orientation="horizontal" >
    		
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginRight="4dp"
    			android:orientation="vertical" >
                
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_start_date"
		            style="?android:listSeparatorTextViewStyle" />
		
		        <TextView
		            android:id="@+id/social_event_display_field_start_date"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:layout_marginLeft="8dp"
		            android:layout_marginRight="8dp"
		            style="?android:listViewStyle" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginLeft="4dp"
    			android:orientation="vertical" >
                
		      	<TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_start_time"
		            style="?android:listSeparatorTextViewStyle" />
		
		        <TextView
		            android:id="@+id/social_event_display_field_start_time"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:layout_marginLeft="8dp"
		            android:layout_marginRight="8dp"
		            style="?android:listViewStyle" />
		        
            </LinearLayout>
            
        </LinearLayout>

        
        <!-- End date and time display -->
        <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:baselineAligned="false"
    		android:orientation="horizontal" >
    		
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginRight="4dp"
    			android:orientation="vertical" >
                
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_end_date"
		            style="?android:listSeparatorTextViewStyle" />
		
		        <TextView
		            android:id="@+id/social_event_display_field_end_date"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:layout_marginLeft="8dp"
		            android:layout_marginRight="8dp"
		            style="?android:listViewStyle" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:layout_marginLeft="4dp"
    			android:orientation="vertical" >
                
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            android:text="@string/form_heading_end_time"
		            style="?android:listSeparatorTextViewStyle" />
		
		        <TextView
		            android:id="@+id/social_event_display_field_end_time"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="12dp"
		            android:layout_marginLeft="8dp"
		            android:layout_marginRight="8dp"
		            style="?android:listViewStyle" />
		        
            </LinearLayout>
            
        </LinearLayout>
        
        <!-- Venue display -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_venue"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:id="@+id/social_event_display_field_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?android:listViewStyle" />
        
        <!-- Location display -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_location"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:id="@+id/social_event_display_field_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            style="?android:listViewStyle" />
        
        <!-- Notes display -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_notes"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:id="@+id/social_event_display_field_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?android:listViewStyle" />
        
        <!-- Attendees display -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/form_heading_attendees"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:id="@+id/social_event_display_field_attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="?android:listViewStyle" />


    </LinearLayout>

</ScrollView>
